add email to whitelist endpoit
