# swagger.yaml
@@ -389,6 +389,58 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /add_to_whitelist:
+    post:
+      operationId: src.main.api_add_to_whitelist
+      summary: Adds an email to the whitelist.
+      description: |
+        Adds an email to the whitelist if the reCAPTCHA verification is successful. 
+        The email is used as a document ID in the 'whitelist' collection.
+      tags:
+        - Whitelist
+      requestBody:
+        required: true
+        description: Email and reCAPTCHA token required to add to the whitelist.
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  format: email
+                  description: The email address to be added to the whitelist.
+                recaptchaToken:
+                  type: string
+                  description: The token generated by reCAPTCHA to verify user action.
+              required:
+                - email
+                - recaptchaToken
+      responses:
+        '200':
+          description: Email added to whitelist successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Email added to whitelist"
+                  success:
+                    type: boolean
+        '400':
+          description: Bad request. Missing or invalid parameters.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error or failed to add email to the whitelist.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 components:
   schemas:
